11/21/13 implement pH meter for 'Solutions' screen
11/21/13 set up model and view for 'Solutions' screen
11/21/13 make 'Neutral' label optional on PHScaleNode, since it's only labeled in 'Basics' sim
11/21/13 change request: 'spit' color should be closer to 'water', try RGB=200,230,230
11/21/13 change request: use a more saturated blue for 'drain cleaner', to distinguish it from water, try RGB=92,111,255
11/21/13 change request: make 'milk' more 'off white', try RGB=250,250,250
11/21/13 change request: bold font for 'Acidic', 'Basic', 'pH' and '7 (Neutral)'
11/21/13 change request: increase y-margin on pH value display
11/20/13 use a darker gray for pH meter wire, since it overlaps the gray faucet so frequently
11/20/13 prevent total volume from exceeding max
11/20/13 tweak all 'diluted' solute colors
11/20/13 change 'Drain Cleaner' color to toilet-bowl-cleaner blue
11/19/13 fix 'reset all' for 'Basics' screen
11/19/13 use same color as beers-law-lab for water
11/19/13 switch to a color range for solutes
11/19/13 make 'color' static for solvent and solute, it's dynamic only for solution
11/19/13 add bulky background to pH value display in 'Basics'
11/19/13 factor out PHValueNode, to be reused in all pH meters
11/19/13 move pH indicator (arrow) to BasicPHMeterNode, since the indicator is different in all 3 meters
11/19/13 when changing solute, drop solution volume to zero
11/18/13 add separator in beaker control panel
11/18/13 extract PHScaleNode, to be used in both 'Basics' and 'Solutions' pH meters
11/18/13 prepare 'pH scale' portion of Basics pH meter for reuse in 'Solutions' screen
11/18/13 adjust drag bounds of dropper
11/18/13 light gray background for control panel
11/18/13 add 'Molecule count' and 'ratio' check boxes (no view components yet)
11/18/13 add options to various model elements, simplify usage of constructors, fix 'Reset All'
11/18/13 use opaque colors for solutes, so that color of solution matches dropper when solution is 100% solute