@@ -1,3 +1,4 @@
+11/21/13 Solutions: expand/collapse bar for pH meter
 11/21/13 implement pH meter for 'Solutions' screen
 11/21/13 set up model and view for 'Solutions' screen
 11/21/13 make 'Neutral' label optional on PHScaleNode, since it's only labeled in 'Basics' sim
